# p2_rating

./: README.md  main.py  main_employees.py  main_sync.py  main_upload.py  pyproject.toml
base/: mes_client.py
config/: settings.py
database/: postgres_client.py
services/: employee_service.py  rating_calculator.py  rating_syncroniser.py  rating_uploader.py
utils/: helpers.py  validators.py
